# red-dragon

./: .gitignore  .gitmodules  .importlinter  .pre-commit-config.yaml  .pylintrc  .talismanrc  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  interpreter.py  pyproject.toml  pyrightconfig.json
.beads/: .beads-credential-key  .gitignore  interactions.jsonl  metadata.json
.beads/backup/: backup_state.json  config.jsonl  dependencies.jsonl  events.jsonl  issues.jsonl  labels.jsonl
.claude/: classify-prompt.sh  design-principles.md  implementation.md  inject-for-code-review.sh  settings.json  tools.md
.claude/conditional/: code-review.md  design-principles.md  refactoring.md  testing-patterns.md  tools-skills.md
.claude/core/: implementation.md  project-context.md  tools-search.md  workflow.md
.claude/hooks/: covers-guard.py  pre-commit
.github/workflows/: ci.yml
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/bmb/: config.yaml
_bmad/bmm/: config.yaml
_bmad/cis/: config.yaml
_bmad/core/: config.yaml
_bmad/tea/: config.yaml
_bmad/wds/: config.yaml
beads/: README.md  issues.jsonl
docs/: architectural-design-decisions.md  cics-support.md  claude-md-audit-2026-03-07.md  frontend-lowering-gaps.md  graph.md  ir-lowering-gaps.md  ir-reference.md  linker-design.md  notes-on-dataflow-design.md  notes-on-frontend-design.md  notes-on-vm-design.md  pipeline-viz.cast  type-system.md
docs/design/: eliminate-irinstruction-plan.md  per-opcode-instruction-types.md  strongly-typed-ir.md
docs/frontend-design/: README.md  base-frontend.md  c.md  cobol.md  cpp.md  csharp.md  go.md  java.md  javascript.md  kotlin.md  lua.md  pascal.md  php.md  python.md  ruby.md  rust.md  scala.md  (+1 more)
interpreter/: __init__.py  __main__.py  address.py  ambiguity_handler.py  api.py  backend.py  binop_coercion.py  builtins.py  cfg.py  cfg_types.py  chunked_llm_frontend.py  class_name.py  closure_id.py  constants.py  continuation_name.py  conversion_result.py  conversion_rules.py  dataflow.py  default_conversion_rules.py  executor.py  field_fallback.py  field_name.py  frontend.py  frontend_extension.py  frontend_extension_lowering.py  frontend_observer.py  func_name.py  func_ref.py  function_signature.py  identity_conversion_rules.py  instructions.py  ir.py  ir_stats.py  language.py  llm_client.py  llm_frontend.py  namespace.py  namespace_resolver.py  null_type_resolver.py  operator_kind.py  (+26 more)
issues/: issues.jsonl
mcp_server/: __init__.py  __main__.py  formatting.py  resources.py  server.py  session.py  tools.py
precommit-scripts/: check-commit-msg  check-terminology  lib-terminology.sh  scan-history
presentation/: index.html  overview-presentation.html  technical-presentation.html
proleap-bridge/: build.sh  pom.xml
pylint_plugins/: no_none_default.py
scripts/: audit_all_frontends.py  audit_cobol_frontend.py  check-terminology  demo_ast_repair.py  demo_cobol_features.py  demo_dataflow.py  demo_hlasm.py  demo_hlasm_bubblesort.py  demo_llm_e2e.py  demo_multifile_project.py  demo_type_inference_tier2.py  demo_type_inference_tier3.py  demo_unresolved_call.py  demo_unsupported_language_haskell.py  exercism_harvest.py  feature_coverage_audit.py  grammar_coverage_audit.py  lib-terminology.sh  lint_no_none_defaults.py  mutation_test.py  nist_ccvs_tracer.py  redact-beads-issues  run_chunked_demo.py  scan-history  symbolic_trace_harness.py
tests/: covers.py  test_backend_refactor.py  test_break_continue.py  test_c_frontend.py  test_chunked_llm_frontend.py  test_closures.py  test_cpp_frontend.py  test_csharp_frontend.py  test_dataflow.py  test_frontend_factory.py  test_go_frontend.py  test_java_frontend.py  test_javascript_frontend.py  test_kotlin_frontend.py  test_llm_frontend.py  test_lua_frontend.py  test_pascal_frontend.py  test_php_frontend.py  test_ruby_frontend.py  test_rust_frontend.py  test_scala_frontend.py  test_switch.py  test_try_catch.py  test_typescript_frontend.py
viz/: __main__.py  app.py  compare_app.py  coverage.py  coverage_app.py  lowering_app.py  lowering_trace.py  pipeline-showcase.html  pipeline.py  project_app.py  project_pipeline.py
(+1509 files in other folders)
