[project]
name = "red-dragon"
version = "0.1.0"
description = "Multi-language LLM-assisted code analysis and execution"
authors = [
    {name = "asgupta"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "pydantic (>=2.12.5,<3.0.0)",
    "litellm (>=1.60.0,<1.82.6)",
    "tree-sitter (>=0.25.2,<0.26.0)",
    "tree-sitter-language-pack (>=0.13.0,<0.14.0)",
    "antlr4-python3-runtime (>=4.13.2,<5.0.0)",
    "mcp[cli] (>=1.26.0,<2.0.0)"
]


[[tool.poetry.packages]]
include = "interpreter"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-n auto -m 'not external'"
markers = [
    "external: tests requiring external services (LLM APIs); run with -m external",
]
tdd_guard_project_root = "/Users/asgupta/code/red-dragon"

[tool.poetry.group.dev.dependencies]
black = "^26.1.0"
pytest = "^8.0.0"
pytest-xdist = "^3.8.0"
radon = "^6.0"
pylint = "^3.0"
import-linter = "^2.0"
grimp = "^3.0"
pydeps = "^1.12"
textual = "^8.1.0"
pyright = "^1.1.408"
tdd-guard-pytest = "^0.1.2"
pytest-cov = "^7.1.0"

[tool.radon]
exclude = "tests/*"
cc_min = "C"

[tool.coverage.run]
source = ["interpreter"]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 85

