[project]
name = "red-dragon"
version = "0.1.0"
description = "Multi-language LLM-assisted code analysis and execution"
authors = [
    {name = "asgupta"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "pydantic (>=2.12.5,<3.0.0)",
    "litellm (>=1.60.0,<1.82.6)",
    "tree-sitter (>=0.25.2,<0.26.0)",
    "tree-sitter-language-pack (>=0.13.0,<0.14.0)",
    "mcp[cli] (>=1.26.0,<2.0.0)",
    "python-fp-lint @ git+https://github.com/avishek-sen-gupta/python-fp-lint.git",
    "lark (>=1.3.1,<2.0.0)",
    "sortedcontainers (>=2.4.0,<3.0.0)"
]

[dependency-groups]
dev = [
    "black>=26.1.0",
    "pytest>=8.0.0",
    "pytest-xdist>=3.8.0",
    "radon>=6.0",
    "pylint>=3.0",
    "import-linter>=2.0",
    "grimp>=3.0",
    "pydeps>=1.12",
    "textual>=8.1.0",
    "pyright>=1.1.408",
    "tdd-guard-pytest>=0.1.2",
    "pytest-cov>=7.1.0",
    "pytest-timeout>=2.4.0",
    "mutmut>=3.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["interpreter"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-n auto --dist=worksteal -m 'not external'"
markers = [
    "external: tests requiring external services (LLM APIs); run with -m external",
    "carddemo_e2e: AWS CardDemo end-to-end CICS tests; mandatory locally, skipped in CI (see tests/integration/cics/conftest.py)",
]
tdd_guard_project_root = "/Users/asgupta/code/red-dragon"

[tool.radon]
exclude = "tests/*"
cc_min = "C"

[tool.coverage.run]
source = ["interpreter"]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 85

[tool.mutmut]
runner = "uv run python -m pytest tests/ -x -q --tb=no -p no:xdist"
tests_dir = "tests/"
